Fix up toolbar button styling on different areas * Mainly on the browser part * Reduces the space between buttons (the margin/padding is too much) * Remove useless border image property from different selectors * Restore PMKit icon size to default * Fix menu button style

--- a/src/chrome/global/findBar.css
+++ b/src/chrome/global/findBar.css
@@ -19,7 +19,6 @@
   border: none !important;
   box-shadow: none !important;
   background: none !important;
-  -moz-border-image: none !important;
 }
 
 #main-window[privatebrowsingmode=temporary] .findbar-closebutton {
