--- a/src/chrome/global/toolbarbutton.css
+++ b/src/chrome/global/toolbarbutton.css
@@ -36,25 +36,11 @@ toolbarbutton:not(.titlebar-button) {
 }
 
 toolbarbutton[type="menu-button"] > .toolbarbutton-menubutton-button {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  -moz-margin-start: -3px;
-  -moz-margin-end: 0;
-  -moz-padding-start: 3px;
-  -moz-padding-end: 2px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  border-radius: 3px 0 0 3px !important;
 }
 
 toolbarbutton[type="menu-button"] > .toolbarbutton-menubutton-dropmarker {
-  margin-top: 0;
-  margin-bottom: 0;
-  -moz-margin-start: 0;
-  -moz-margin-end: -3px;
-  -moz-padding-start: 1px;
-  -moz-padding-end: 3px;
-  padding-top: 0;
-  padding-bottom: 0;
+  border-radius: 0 3px 3px 0 !important;
 }
 
 toolbarbutton:not([open="true"]):not([checked="true"]):not([disabled="true"]):not(:active):hover {
